[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/pics/speaker_on.png" type="Texture" id=1]
[ext_resource path="res://scenes/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/level.gd" type="Script" id=3]
[ext_resource path="res://assets/pics/paint_brush.png" type="Texture" id=4]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/pics/piano.png" type="Texture" id=6]
[ext_resource path="res://assets/pics/music_notes.png" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="Gradient" id=1]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.162011, 0.519553 )
colors = PoolColorArray( 0.0881195, 0.292427, 0.644531, 1, 0.03479, 0.0553379, 0.222656, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill_to = Vector2( 0, 1 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true

[node name="hbox" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 1

[node name="change_color" type="Button" parent="hbox"]
margin_left = 178.0
margin_right = 417.0
margin_bottom = 70.0
hint_tooltip = "Cycle through water colors"
text = "Change Color"
icon = ExtResource( 4 )

[node name="play_sound" type="Button" parent="hbox"]
margin_left = 427.0
margin_right = 638.0
margin_bottom = 70.0
hint_tooltip = "Play one of random sounds"
text = "Play Sound"
icon = ExtResource( 6 )

[node name="chuj" type="Button" parent="hbox"]
margin_left = 648.0
margin_right = 845.0
margin_bottom = 70.0
hint_tooltip = "Some swearing to keep the rent low"
text = "say \"хуй\""
icon = ExtResource( 7 )

[node name="hbox2" type="VBoxContainer" parent="."]
anchor_left = 0.99
anchor_right = 0.99
anchor_bottom = 0.5
margin_left = -84.0

[node name="icon" type="TextureButton" parent="hbox2"]
margin_left = 10.0
margin_right = 74.0
margin_bottom = 64.0
hint_tooltip = "Audio On/Off"
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )

[node name="audio_slider" type="HSlider" parent="hbox2"]
margin_top = 68.0
margin_right = 84.0
margin_bottom = 84.0
size_flags_horizontal = 7
max_value = 1.0
step = 0.05
value = 0.5

[node name="level" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="audio" type="AudioStreamPlayer" parent="."]
bus = "sounds"

[connection signal="button_up" from="hbox/change_color" to="." method="_on_change_color_button_up"]
[connection signal="button_up" from="hbox/play_sound" to="." method="_on_play_sound_button_up"]
[connection signal="button_up" from="hbox/chuj" to="." method="_say_text" binds= [ "хуй" ]]
[connection signal="button_up" from="hbox2/icon" to="." method="_on_audio_icon_button_up"]
[connection signal="value_changed" from="hbox2/audio_slider" to="." method="_on_audio_slider_value_changed"]
